k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: 03004968719/vidly-server:new
          ports:
            - containerPort: 4000
          #? All necessary environment variables for later use
          env: #! all env vars should be in string form
            - name: REDIS_HOST
              value: redis-cluster-ip-service # name of the service
            - name: REDIS_PORT
              value: '6379' # already defined port in that service
            - name: PGUSER
              value: postgres
            - name: PGHOST
              value: postgres-cluster-ip-service
            - name: PGPORT
              value: '5432'
            - name: PGDATABASE
              value: postgres
            - name: PGPASSWORD # secret
              valueFrom:
                secretKeyRef:
                  name: pgpassword
                  key: PGPASSWORD
            - name: MONGOSTRING # secret
              valueFrom:
                secretKeyRef:
                  name: mongostring
                  key: MONGOSTRING
