k8s/ingress-service.yaml
apiVersion: extensions/v1beta1 # this apiVersion is expired but this is the only one working in cloud
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1 # rewriting target

    #! add this line after cert install and its file push
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true' # redirect to https , true must be a string
spec:
  #! add this tls line after cert install and its file push
  tls:
    - hosts:
        - goldlacpaints.online
        - www.goldlacpaints.online
      secretName: goldlacpaints-online # coming from certificate.yaml file
  rules:
    - host: goldlacpaints.online # new line - add this line after cert install and its file push
      http:
        paths:
          - path: / # this must be in same format -- simple route
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /graphql
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 4000
    - host: www.goldlacpaints.online #! new line - add this line after cert install and its file push
      http:
        paths:
          - path: / # this must be in same format -- simple route
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /graphql
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 4000
# in this project, we are not using any rewriting technique
# Path rewriting technique
# uncomment above line for rewrite target --
# in paths -> path , when we use '/?(.*)' its fine for /
# when we use '/api/?(.*)', this will change /api/something to /something
